--- a/WeatherApp/Apps/Weather.Android/packages.config
+++ b/WeatherApp/Apps/Weather.Android/packages.config
@@ -6,8 +6,11 @@
   <package id="HockeySDK.Xamarin" version="4.1.0-beta3" targetFramework="monoandroid44" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="monoandroid42" />
   <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="23.4.0" targetFramework="monoandroid42" />
+  <package id="Xamarin.Android.Support.Design" version="23.4.0" targetFramework="monoandroid50" />
   <package id="Xamarin.Android.Support.v4" version="23.4.0" targetFramework="monoandroid42" />
   <package id="Xamarin.Android.Support.v7.AppCompat" version="23.4.0" targetFramework="monoandroid42" />
+  <package id="Xamarin.Android.Support.v7.CardView" version="23.4.0" targetFramework="monoandroid42" />
+  <package id="Xamarin.Android.Support.v7.Palette" version="23.4.0" targetFramework="monoandroid42" />
   <package id="Xamarin.Android.Support.v7.RecyclerView" version="23.4.0" targetFramework="monoandroid42" />
   <package id="Xamarin.Android.Support.Vector.Drawable" version="23.4.0" targetFramework="monoandroid42" />
 </packages>
