--- a/WeatherApp/Apps/Weather.Android/Weather.Android.csproj
+++ b/WeatherApp/Apps/Weather.Android/Weather.Android.csproj
@@ -9,7 +9,7 @@
     <ProjectTypeGuids>{EFBA0AD7-5A72-4C68-AF49-83D382785DCF};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Weather.Android</RootNamespace>
+    <RootNamespace>Weather.AndroidApp</RootNamespace>
     <AssemblyName>Weather</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <AndroidApplication>true</AndroidApplication>
@@ -122,6 +122,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Activities\AboutActivity.cs" />
+    <Compile Include="Activities\NewMainActivity.cs" />
     <Compile Include="Adapters\AboutAdapter.cs" />
     <Compile Include="Activities\AutofacActivity.cs" />
     <Compile Include="Adapters\MainWeatherAdapter.cs" />
@@ -134,7 +135,7 @@
     <Compile Include="Experimental\SwipePage\AppSectionsPagerAdapter.cs" />
     <Compile Include="Activities\Experimental\DrawerTestActivity.cs" />
     <Compile Include="Activities\Experimental\CollectionDemoActivity.cs" />
-    <Compile Include="Activities\Experimental\MainActivity.Experimental.cs" />
+    <None Include="Activities\Experimental\MainActivity.Experimental.cs" />
     <Compile Include="Activities\SettingsActivity.cs" />
     <Compile Include="AppServices\DictionaryStorageService.cs" />
     <Compile Include="AppServices\ISettings.cs" />
@@ -147,15 +148,16 @@
     <Compile Include="Extensions.cs" />
     <Compile Include="HourlyForecastPanel.cs" />
     <Compile Include="Experimental\IItemClickListener.cs" />
-    <Compile Include="Activities\MainActivity.cs" />
-    <Compile Include="Activities\MainActivity.Location.cs">
+    <None Include="Activities\MainActivity.cs" />
+    <None Include="Activities\MainActivity.Location.cs">
       <DependentUpon>MainActivity.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Activities\MainActivity.Components.cs">
+    </None>
+    <None Include="Activities\MainActivity.Components.cs">
       <DependentUpon>MainActivity.cs</DependentUpon>
-    </Compile>
+    </None>
     <Compile Include="Experimental\MenuAdapter.cs" />
     <Compile Include="Experimental\MenuFragment.cs" />
+    <Compile Include="Interfaces\IUpdateFragment.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Experimental\MyActionBarDrawerToggle.cs" />
@@ -223,6 +225,9 @@
       <SubType>Designer</SubType>
     </AndroidResource>
     <AndroidResource Include="Resources\layout\main_layout.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+    <AndroidResource Include="Resources\layout\new_main_layout.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
   </ItemGroup>
@@ -671,9 +676,7 @@
       <SubType>Designer</SubType>
     </AndroidResource>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Resources\animator\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <AndroidResource Include="Resources\drawable-hdpi\ic_add_black_24dp.png" />
   </ItemGroup>
@@ -717,6 +720,12 @@
     <AndroidResource Include="Resources\layout\city_weather_fragment.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\animator\fade_in.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\animator\fade_out.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
