--- a/WeatherApp/WeatherApi/Services.Portable/Services.Portable.csproj
+++ b/WeatherApp/WeatherApi/Services.Portable/Services.Portable.csproj
@@ -55,10 +55,21 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RecentCities.cs" />
     <Compile Include="RestClient.cs" />
+    <Compile Include="ServiceApiModule.cs" />
+    <Compile Include="Service\IWeatherService.cs" />
+    <Compile Include="Service\WeatherService.cs" />
     <Compile Include="WeatherUriBuilder\WeatherOptions.cs" />
     <Compile Include="WeatherUriBuilder\WeatherUriBuilder.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="Autofac, Version=3.5.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Autofac.3.5.2\lib\portable-net4+sl5+netcore45+wpa81+wp8+MonoAndroid1+MonoTouch1\Autofac.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.Practices.ServiceLocation, Version=1.3.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\CommonServiceLocator.1.3\lib\portable-net4+sl5+netcore45+wpa81+wp8\Microsoft.Practices.ServiceLocation.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Newtonsoft.Json.8.0.3\lib\portable-net40+sl5+wp80+win8+wpa81\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
